--- a/notebooks/visualizacao.ipynb
+++ b/notebooks/visualizacao.ipynb
@@ -15,139 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Métrica</th>\n",
-       "      <th>Valor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Quantidade de vértices</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Quantidade de arestas</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Quantidade de arcos</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Quantidade de vértices requeridos</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Quantidade de arestas requeridas</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Quantidade de arcos requeridos</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Densidade do grafo</td>\n",
-       "      <td>0.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Componentes conectados</td>\n",
-       "      <td>[{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12}]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Grau mínimo</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Grau máximo</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Intermediação (betweenness)</td>\n",
-       "      <td>{1: 0, 2: 28, 3: 10, 4: 0, 5: 25, 6: 13, 7: 13...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Caminho médio</td>\n",
-       "      <td>24.38843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Diâmetro</td>\n",
-       "      <td>65.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              Métrica  \\\n",
-       "0              Quantidade de vértices   \n",
-       "1               Quantidade de arestas   \n",
-       "2                 Quantidade de arcos   \n",
-       "3   Quantidade de vértices requeridos   \n",
-       "4    Quantidade de arestas requeridas   \n",
-       "5      Quantidade de arcos requeridos   \n",
-       "6                  Densidade do grafo   \n",
-       "7              Componentes conectados   \n",
-       "8                         Grau mínimo   \n",
-       "9                         Grau máximo   \n",
-       "10        Intermediação (betweenness)   \n",
-       "11                      Caminho médio   \n",
-       "12                           Diâmetro   \n",
-       "\n",
-       "                                                Valor  \n",
-       "0                                                  12  \n",
-       "1                                                   0  \n",
-       "2                                                   0  \n",
-       "3                                                   7  \n",
-       "4                                                  11  \n",
-       "5                                                  11  \n",
-       "6                                            0.333333  \n",
-       "7           [{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12}]  \n",
-       "8                                                   3  \n",
-       "9                                                   5  \n",
-       "10  {1: 0, 2: 28, 3: 10, 4: 0, 5: 25, 6: 13, 7: 13...  \n",
-       "11                                           24.38843  \n",
-       "12                                               65.0  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Grafo' object has no attribute 'quantidade_vertices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m caminho = \u001b[33m\"\u001b[39m\u001b[33m../selected_instances/BHW1.dat\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     10\u001b[39m grafo = carregar_grafo(caminho)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m stats = \u001b[43mcalcular_estatisticas\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrafo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m df_stats_BHW1 = pd.DataFrame(stats.items(), columns=[\u001b[33m\"\u001b[39m\u001b[33mMétrica\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mValor\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m     14\u001b[39m df_stats_BHW1\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\André Araújo\\Documents\\GitHub\\Grafos\\src\\estatisticas.py:12\u001b[39m, in \u001b[36mcalcular_estatisticas\u001b[39m\u001b[34m(grafo)\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcalcular_estatisticas\u001b[39m(grafo):\n\u001b[32m     11\u001b[39m     estatisticas = {\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mQuantidade de vértices\u001b[39m\u001b[33m\"\u001b[39m: \u001b[43mgrafo\u001b[49m\u001b[43m.\u001b[49m\u001b[43mquantidade_vertices\u001b[49m(),\n\u001b[32m     13\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mQuantidade de arestas\u001b[39m\u001b[33m\"\u001b[39m: grafo.quantidade_arestas(),\n\u001b[32m     14\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mQuantidade de arcos\u001b[39m\u001b[33m\"\u001b[39m: grafo.quantidade_arcos(),\n\u001b[32m     15\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mQuantidade de vértices requeridos\u001b[39m\u001b[33m\"\u001b[39m: grafo.quantidade_vertices_requeridos(),\n\u001b[32m     16\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mQuantidade de arestas requeridas\u001b[39m\u001b[33m\"\u001b[39m: grafo.quantidade_arestas_requeridas(),\n\u001b[32m     17\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mQuantidade de arcos requeridos\u001b[39m\u001b[33m\"\u001b[39m: grafo.quantidade_arcos_requeridos(),\n\u001b[32m     18\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mDensidade do grafo\u001b[39m\u001b[33m\"\u001b[39m: grafo.densidade(),\n\u001b[32m     19\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mComponentes conectados\u001b[39m\u001b[33m\"\u001b[39m: grafo.componentes_conectados(),\n\u001b[32m     20\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mGrau mínimo\u001b[39m\u001b[33m\"\u001b[39m: grafo.grau_minimo(),\n\u001b[32m     21\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mGrau máximo\u001b[39m\u001b[33m\"\u001b[39m: grafo.grau_maximo(),\n\u001b[32m     22\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mIntermediação (betweenness)\u001b[39m\u001b[33m\"\u001b[39m: grafo.intermediation(),\n\u001b[32m     23\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mCaminho médio\u001b[39m\u001b[33m\"\u001b[39m: grafo.caminho_medio(),\n\u001b[32m     24\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mDiâmetro\u001b[39m\u001b[33m\"\u001b[39m: grafo.diametro()\n\u001b[32m     25\u001b[39m     }\n\u001b[32m     26\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m estatisticas\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Grafo' object has no attribute 'quantidade_vertices'"
+     ]
     }
    ],
    "source": [
